2005-01-21  Hubert Figuiere  <hfiguiere@teaser.fr>

	* ptp-bugs.h: Added file. 

	* library.c (camera_init): Lookup for PTP bug
	(init_ptp_fs): Bug specific workaround (EOS 20D + 300D)
	Added flags for bugs in camera-list.

2005-01-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-P120

2005-01-17  Marcus Meissner  <marcus@jet.franken.de>
	
	From Dean Brettle <brettle@users.sourceforge.net>
	* library.c: Use capture date if no modify date is
	  there.
	
2005-01-17  Marcus Meissner  <marcus@jet.franken.de>

	From Vegard Engen <vegard@engen.priv.no>
	* library.c, ptp.h:
	
	  Implemented PTP Property handling for:
	  - generic WhiteBalance
	  - generic ImageSize
	  - Nikon Image Comment

2005-01-17  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added PowerShot SD200.

2005-01-16  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Pass Camera* to property put and get
	  functions too, so we can make vendor based adjustements.

2005-01-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Return the correct path and filename
	  on --capture-image.

2005-01-13  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Minolta DIMage Z2 (PictBridge).

2005-01-11  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Sony DSC-T3 as reported.

2005-01-08  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Send owner name with \0, or we get
	  it back corrupted.

2005-01-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon FlashMode property.

2004-12-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon CoolPix 4100 as reported.

2004-12-21  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Kodak DX7590 (bug #1089154)

2004-12-21  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Sony DSC-P51 (bug #1088798)

2004-12-20  Hubert Figuiere  <hfiguiere@teaser.fr>

	* library.c: Added Sony DSC-F717. (bug #1087148)
